- added distribution.xml to practice making custom assemblies