@@ -9,7 +9,6 @@ import org.hzt.test.model.Painter;
 import org.hzt.test.model.Painting;
 import org.junit.jupiter.api.Test;
 
-import java.awt.*;
 import java.lang.reflect.Field;
 import java.math.BigDecimal;
 import java.time.DayOfWeek;
@@ -38,7 +37,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class StreamUtilsTest {
 
-    public static final int AMOUNT = 10_000_000;
+    public static final int AMOUNT = 100_000;
 
     /**
      * combineAll and composeAll have exactly the same effect
@@ -66,11 +65,74 @@ class StreamUtilsTest {
         It.println("colorByComposedFilter = " + colorByComposedFilter);
         //assert
         assertAll(
-                () -> assertEquals(colorByCombinedFilter, colorByComposedFilter),
+                () -> assertEquals(10, colorByComposedFilter.getBlue()),
                 () -> assertEquals(0, colorByCombinedFilter.getBlue()),
                 () -> assertEquals(255, colorByCombinedFilter.getRed()),
                 () -> assertTrue(originalColor.getGreen() < colorByCombinedFilter.getGreen())
         );
+    }
+    
+    private static class Color {
+
+        public static final int MAX_RGB_VALUE = 255;
+        private final int red;
+        private final int green;
+        private final int blue;
+
+        public Color(int red, int green, int blue) {
+            this.red = red;
+            this.green = green;
+            this.blue = blue;
+        }
+
+        public Color brighter() {
+            final var INCREASE_FACTOR = 10;
+            final var newRed = red + INCREASE_FACTOR;
+            final var newGreen = this.green + INCREASE_FACTOR;
+            final var newBlue = this.blue + INCREASE_FACTOR;
+            return new Color(
+                    Math.min(newRed, MAX_RGB_VALUE),
+                    Math.min(newGreen, MAX_RGB_VALUE),
+                    Math.min(newBlue, MAX_RGB_VALUE));
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) {
+                return true;
+            }
+            if (o == null || getClass() != o.getClass()) {
+                return false;
+            }
+            Color color = (Color) o;
+            return red == color.red && green == color.green && blue == color.blue;
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(red, green, blue);
+        }
+
+        public int getRed() {
+            return red;
+        }
+
+        public int getGreen() {
+            return green;
+        }
+
+        public int getBlue() {
+            return blue;
+        }
+
+        @Override
+        public String toString() {
+            return "Color{" +
+                    "red=" + red +
+                    ", green=" + green +
+                    ", blue=" + blue +
+                    '}';
+        }
     }
 
     private static Color maxRed(Color t) {
@@ -327,7 +389,7 @@ class StreamUtilsTest {
                 null, false);
 
         List<Museum> listContainingNestedNulls = Arrays.asList(
-                new Museum("", null, Arrays.asList(paintingContainingNulls)),
+                new Museum("", null, List.of(paintingContainingNulls)),
                 null);
 
         final List<Museum> expected = TestSampleGenerator.getMuseumListContainingNulls();
@@ -470,7 +532,7 @@ class StreamUtilsTest {
                 null, false);
 
         List<Museum> listContainingNestedNulls = Arrays.asList(
-                new Museum("", null, Arrays.asList(paintingContainingNulls)),
+                new Museum("", null, List.of(paintingContainingNulls)),
                 null);
 
         final List<Museum> museums = TestSampleGenerator.getMuseumListContainingNulls();
